[package]
name = "wallet-share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
async-trait = "0.1.59"
rgb-lib = "0.1.3"
once_cell = "1.16.0"
test-context = "0.1.4"

[features]
all = ["wallet"]
wallet = []
